#122 - Marjolein: make sure sliders don't overlap the nav dots

--- a/src/scss/components/_sliders.scss
+++ b/src/scss/components/_sliders.scss
@@ -79,5 +79,6 @@
 .input {
     .sliders {
         margin-left: $indent;
+        margin-right: 2.5rem;
     }
 }
